--- a/src/mainpage2.css
+++ b/src/mainpage2.css
@@ -51,3 +51,13 @@
     text-decoration: none;
     color: inherit;
 }
+
+.cupons {
+    margin-top: 5%;
+    margin-left: 5%;
+}
+
+.cupons img {
+    width: 25%;
+    height: 25%;
+}
